load bookmarks to dom

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<title>Bookmark Ui</title>
 	<script type="module" src="/src/main.ts" async></script>
 </head>
-<h1>Hello there!</h1>
-<p id="response"></p>
-<p>Goodbye</p>
+
+<header><button id="open-btn">Open File</button></header>
+<ul id="bookmark-list">
+</ul>
 
 <body>
 </body>
