--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 	<script type="module" src="/src/main.ts" async></script>
 </head>
 
-<header><button id="open-btn">Open File</button></header>
-<ul id="bookmark-list">
-</ul>
+<header>
+	<button id="open-btn">Open File</button>
+	<button id="reset-scroll">Reset Scroll</button>
+	<button id="collapse-all">Collapse All</button>
+	<button id="discard-bookmarks">Discard All</button>
+</header>
+
+<section class="bookmark-list">
+	<input type="checkbox">
+	<h1>Bookmarks</h1>
+	<ul>
+	</ul>
+</section>
 
 <body>
 </body>
